--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,27 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
   }
+  input[type=number]{
+    width: 30%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 30%;
+    background-color: #C2B6A8;
+    color: white;
+    padding:5px 0px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left:100px;
+  }
+  
+  input[type=submit]:hover {
+    background-color:#856E51;
+  }
+  
