--- a/css/index.css
+++ b/css/index.css
@@ -59,3 +59,13 @@ h1,p{
  h2{
    margin-left: 40px;
  }
+
+ footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color:#C2B6A8;
+    color: black;
+    text-align: center;
+ }
